# plotly_z

./: .gitignore  README.md  pyproject.toml
plotly_z/: __init__.py  enums.py  ploter.py
tests/: tests.py
