[tool.poetry]
name = "plotly_z"
version = "0.1.0"
description = ""
authors = ["Fedor Kuznetsov <dmesser@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.7.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
